# yt-vd

./: .gitignore  README.md  build.bat  build.sh  install.ps1  install.sh  pyproject.toml  requirements.txt  uninstall.ps1  yt-vd.spec
.github/workflows/: release.yml
Formula/: yt-vd.rb
scripts/: bump_version.py
src/: __init__.py  __main__.py  cli.py  constants.py  interactive.py  manual.py
src/core/: audio.py  config.py  display.py  downloader.py  fragment_safety.py  history.py  metadata.py  parallel.py  playlist.py  presentation.py  progress.py  quality.py  retry.py  search.py  subtitles.py  thumbnail_renderer.py  usecases.py  utils.py  ydl_options.py
tests/: test_basic.py  test_production_readiness.py  test_rigorous.py
winget/: yt-vd.yaml
