[project]
name = "yt-vd"
version = "1.1.18"
description = "A powerful YouTube video & playlist downloader with CLI — parallel downloads, smart quality fallback, audio extraction, and more."
readme = "README.md"
authors = [
    { name = "dhiraj-rajput", email = "rajputdhiraj1010@gmail.com" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["youtube", "downloader", "video", "playlist", "cli", "yt-dlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "yt-dlp>=2026.6.9",
    "click>=8.1.0",
    "typer>=0.26.0",
    "rich>=15.0.0",
    "questionary>=2.1.0",
    "platformdirs>=4.9.0",
    "pillow>=12.2.0",
]

[project.scripts]
yt-vd = "cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "mypy>=2.1.0",
    "ruff>=0.15.0",
    "pyinstaller>=6.20.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["core"]
py-modules = ["cli", "constants", "interactive", "manual", "__main__", "__init__"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
exclude = ["src/__main__.py", "src/__init__.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true
